# database_analysis-ai

./: .gitignore  Readme.md
ai-analyst-backend/: main.py  pyproject.toml  run_agent.py  test_brain.py
ai-analyst-backend/app/agent/: graph.py  nodes.py  state.py
ai-analyst-backend/app/schema/: api_models.py
ai-analyst-backend/app/tools/: db.py
